clusters/home-lab/cdk8s_definitions/dist/prod-media/qbittorrent/qbittorrent.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent-18.1.6
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 4.6.2
    helm-revision: "1"
    helm.sh/chart: qbittorrent-18.1.6
    release: qbittorrent
    service.name: main
  name: qbittorrent
  namespace: prod-media
spec:
  ports:
    - name: main
      port: 10095
      protocol: TCP
      targetPort: 8080
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
    pod.name: main
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent-18.1.6
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 4.6.2
    helm-revision: "1"
    helm.sh/chart: qbittorrent-18.1.6
    release: qbittorrent
    service.name: torrent
  name: qbittorrent-torrent
  namespace: prod-media
spec:
  ports:
    - name: torrent
      port: 6881
      protocol: TCP
      targetPort: 6881
    - name: torrentudp
      port: 6881
      protocol: UDP
      targetPort: 6881
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
    pod.name: main
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent-18.1.6
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 4.6.2
    helm-revision: "1"
    helm.sh/chart: qbittorrent-18.1.6
    release: qbittorrent
  name: qbittorrent
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        app: qbittorrent-18.1.6
        app.kubernetes.io/instance: qbittorrent
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/version: 4.6.2
        helm-revision: "1"
        helm.sh/chart: qbittorrent-18.1.6
        pod.lifecycle: permanent
        pod.name: main
        release: qbittorrent
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: S6_READ_ONLY_ROOT
              value: "1"
          image: ghcr.io/onedr0p/qbittorrent:4.6.2@sha256:fedb62126c82ae0c7192e9052633411294a27e9c233613c03b0a8d168d160040
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: main
              protocol: TCP
            - containerPort: 6881
              name: torrent
              protocol: TCP
            - containerPort: 6881
              name: torrentudp
              protocol: UDP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 2
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /downloads
              name: downloads
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: qbittorrent
              app.kubernetes.io/name: qbittorrent
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: truecharts.org/rack
          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: qbittorrent
              app.kubernetes.io/name: qbittorrent
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: devshm
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: varrun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: prod-infra-chain-basic@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: qbittorrent-18.1.6
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 4.6.2
    helm-revision: "1"
    helm.sh/chart: qbittorrent-18.1.6
    release: qbittorrent
  name: qbittorrent
  namespace: prod-media
spec:
  rules:
    - host: qbittorrent.st0rmingbr4in.com
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 10095
            path: /
            pathType: Prefix
